<resources>
    <string name="app_name">HappyAndroid</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">热搜</string>
    <string name="title_notifications">我的</string>

    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="browser_in_system">用系统浏览器打开</string>
    <string name="browser">Use system browser open</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>

    <string name="login_hint">请先登录</string>
    <string name="outside_title">站外文章</string>


    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">请输入用户名</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="content_libai">将进酒\n
        李白\n
        君不见，黄河之水天上来，奔流到海不复回。\n
        君不见，高堂明镜悲白发，朝如青丝暮成雪。\n\n
        人生得意须尽欢，莫使金樽空对月。\n
        天生我材必有用，千金散尽还复来。\n
        烹羊宰牛且为乐，会须一饮三百杯。\n\n
        岑夫子，丹丘生，将进酒，君莫停。\n
        与君歌一曲，请君为我倾耳听。\n\n
        钟鼓馔玉不足贵，但愿长醉不复醒。\n
        古来圣贤皆寂寞，惟有饮者留其名。\n
        陈王昔时宴平乐，斗酒十千恣欢谑。\n\n
        主人何为言少钱，径须沽取对君酌。\n
        五花马，千金裘，呼儿将出换美酒，\n\n
        与尔同销万古愁。</string>
</resources>
