<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuShare"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menuBrowser"
        android:icon="@drawable/ic_action_browser"
        android:orderInCategory="100"
        android:title="@string/browser_in_system"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuLike"
        android:icon="@drawable/ic_action_white_like"
        android:orderInCategory="100"
        android:title="@string/collect"
        app:showAsAction="never" />

</menu>