<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.lvshou.pxy.view.BottomScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/while_most_color"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="50dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/share"
                android:textSize="60sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/select_color"
                android:gravity="center"
                android:text="@string/permission_rationale"
                android:textSize="30sp" />

        </LinearLayout>
    </com.lvshou.pxy.view.BottomScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="迪迪呢"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>